--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>-=- 🦋 -=-</title>
+    <title>-=-🦋 My Home-=-</title>
 	<!-- created by @vertt_t -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
@@ -18,10 +18,10 @@
                 <div id="sGreetings" class="sGreetings"></div>
                 
                 <div class="header-txt">s̶n̶s̶</div>
-                <span>➜</span> <a class="link" href="#" target="_blank">reddit</a> <span>/</span>
-                <a class="link" href="#" target="https://www.facebook.com/">facebook</a> <span>/</span>
-                <a class="link" href="#" target="https://www.reddit.com/">reddit</a> <span>/</span>
-                <a class="link" href="#" target="https://anilist.co/home">anilist</a>
+                <span>➜</span> <a class="link" href="https://www.reddit.com/" target="_blank">reddit</a> <span>/</span>
+                <a class="link" href="https://www.facebook.com/" target="https://www.facebook.com/">facebook</a> <span>/</span>
+                <a class="link" href="https://www.instagram.com/" target="https://www.reddit.com/">instagram</a> <span>/</span>
+                <a class="link" href="https://anilist.co/home" target="https://anilist.co/home">anilist</a>
             
                 <div class="header-txt">e̶n̶t̶e̶r̶t̶a̶i̶n̶m̶e̶n̶t̶</div>
                 <span>➜</span> <a class="link" href="#" target="_blank">netflix</a> <span>/</span>
