--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="link" href="#" target="_blank">codedamn</a>
                 
                 <div class="header-txt">c̶o̶u̶r̶s̶e̶</div>
-                <span>➜</span> <a class="https://login.canvas.ucdavis.edu/ href="#" target="_blank">canvas</a> <span>/</span>
+                <span>➜</span> <a class="link" href="https://login.canvas.ucdavis.edu/" target="_blank">canvas</a> <span>/</span>
                 <a class="link" href="https://oasis.ucdavis.edu/" target="_blank">oasis</a>
             
             </div>
