--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <body onload="startTime()">
+	<div class="bg-music">
+		<audio autoplay loop>
+			<source src="sounds/Regent's Park.mp3" type="audio/mpeg" />
+		</audio>
         <div class="box">
             <div class="box-image">
                 <img src="images/lofi.gif">
