--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="link" href="https://www.youtube.com/playlist?list=PLdysSH9oUqEp9rn8LgSkmJB4ROA1iMQPX" target="_blank">blender again but anime style</a>
             
                 <div class="header-txt">Hobbies Pt. 2</div>
-                <span>➜</span> <a class="link" href="#" target="_blank">codepen</a> <span>/</span>
+                <span>➜</span> <a class="link" href="https://www.w3schools.com/html/default.asp" target="_blank">html</a> <span>/</span>
                 <a class="link" href="https://github.com/" target="_blank">github</a> <span>/</span>
                 <a class="link" href="#" target="_blank">codedamn</a>
                 
