--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             
                 <div class="header-txt">Hobbies Pt. 2</div>
                 <span>➜</span> <a class="link" href="https://www.w3schools.com/html/default.asp" target="_blank">html</a> <span>/</span>
-                <a class="link" href="https://github.com/" target="_blank">github</a> <span>/</span>
-                <a class="link" href="#" target="_blank">codedamn</a>
+                <a class="link" href="https://github.com/" target="_blank">coding</a> <span>/</span>
+                <a class="link" href="https://unsplash.com/" target="_blank">photography</a>
                 
                 <div class="header-txt">College</div>
                 <span>➜</span> <a class="link" href="https://login.canvas.ucdavis.edu/" target="_blank">canvas</a> <span>/</span>
