--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body onload="startTime()">
         <div class="box">
             <div class="box-image">
-                <img src="images/1/jpg">
+                <img src="images/1.jpg">
             </div>
             <div class="box-content">
                 <div id="sGreetings" class="sGreetings"></div>
