--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <div class="header-txt">Hobbies Pt. 2</div>
                 <span>➜</span> <a class="link" href="https://www.w3schools.com/html/default.asp" target="_blank">html</a> <span>/</span>
                 <a class="link" href="https://github.com/" target="_blank">coding</a> <span>/</span>
-                <a class="link" href="https://unsplash.com/" target="_blank">photography</a>
+                <a class="link" href="https://unsplash.com/" target="_blank">photography</a> <span>/</span>
+		<a class="link" href="https://dribbble.com/" target="_blank">design</a>
                 
                 <div class="header-txt">College</div>
                 <span>➜</span> <a class="link" href="https://login.canvas.ucdavis.edu/" target="_blank">canvas</a> <span>/</span>
