--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                 <div class="header-txt">College</div>
                 <span>➜</span> <a class="link" href="https://login.canvas.ucdavis.edu/" target="_self">canvas</a> <span>/</span>
                 <a class="link" href="https://oasis.ucdavis.edu/" target="_self">oasis</a>
-            
+		        
+		<audio controls autoplay>
+		<source src="sounds/regents_park.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+		</audio>
             </div>
         </div>
 </body>
